--- a/situation.html
+++ b/situation.html
@@ -65,7 +65,7 @@
 
     </div>
 </body>
-<script src="https://cdn.bootcss.com/jquery/3.0.0/core.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.10.1/jquery.js"></script>
 <script>
 //    let text = `<div class="box">
 //            <div class="top flex flex-pack-justify">
@@ -323,7 +323,6 @@ var slide = function (option) {
 
     //滑动开始
     function start(e) {
-        console.log(objparent)
         if (objparent.scrollTop <= 0 && !isLock) {
             var even = typeof event == "undefined" ? e : event;
             //标识操作进行中
